# rp2040-project-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: make.yml
src/: main.c
